# pamoja

./: Cargo.toml  README.md  deny.toml  justfile
.devcontainer/: Dockerfile
.github/scripts/: generate-badges.mjs
.github/workflows/: badges.yml  ci.yml  node.yml  pages.yml  release-crates.yml  release-node.yml  release-nuget.yml  release-python.yml
bindings/dotnet/: Directory.Build.props
bindings/node/: .gitignore  Cargo.toml  README.md  index.d.ts  index.js  package-lock.json  package.json  test.js  tsconfig.json
bindings/node/facade/: index.ts
bindings/node/npm/darwin-arm64/: README.md  package.json
bindings/node/npm/darwin-x64/: README.md  package.json
bindings/node/npm/linux-arm64-gnu/: README.md  package.json
bindings/node/npm/linux-x64-gnu/: README.md  package.json
bindings/node/npm/win32-x64-msvc/: README.md  package.json
bindings/node/src/: lib.rs  mqtt.rs
bindings/python/: Cargo.toml  README.md  pyproject.toml
crates/pamoja-actuators/: Cargo.toml  README.md
crates/pamoja-actuators/src/: lib.rs  pca9685.rs  stepper.rs
crates/pamoja-audit/: Cargo.toml  README.md
crates/pamoja-bus/: README.md
crates/pamoja-can/: Cargo.toml  README.md
crates/pamoja-can/src/: error.rs  frame.rs  id.rs  j1939.rs  lib.rs
crates/pamoja-coap/: README.md
crates/pamoja-codec/: Cargo.toml  README.md
crates/pamoja-codec/src/: delta.rs  lib.rs
crates/pamoja-core/: Cargo.toml  README.md
crates/pamoja-core/src/: error.rs  lib.rs  store.rs
crates/pamoja-dashboard/: Cargo.toml  README.md
crates/pamoja-dashboard/docs/api/: README.md  assets.md  auth.md  command.md  fleet.md  mock.md  serve.md  source.md  state.md
crates/pamoja-dashboard/examples/: dev.rs  gateway.rs  snapshot.rs
crates/pamoja-dashboard/src/: assets.rs  auth.rs  catalog.rs  command.rs  fleet.rs  lib.rs  lite.rs  mock.rs  serve.rs  source.rs  state.rs
crates/pamoja-dashboard/web/: global.css  index.html  lite.html
crates/pamoja-dashboard/web/app/: app.js  detail.js  edits.js  feed.js  i18n.js  nav.js  store.js  viz.js
crates/pamoja-dashboard/web/app/components/: alarm-bar.js  dashboard-page.js  group-modal.js  manage-modal.js  mesh-modal.js  network-view.js  pairing-modal.js  sensor-modal.js  top-bar.js
crates/pamoja-dashboard/web/app/i18n/: ar.js  ar.json  en.js  en.json  fr.js  fr.json  hi.js  hi.json  pt.js  pt.json  sw.js  sw.json
crates/pamoja-dashboard/web/app/lib/: detail.js  discovery.js  edits.js  feed.js  i18n.js  pair.js
crates/pamoja-dashboard/web/app/lib/crypto/: bytes.js  hkdf.js  hmac.js  sha256.js
crates/pamoja-dashboard/web/app/lib/viz/: glyphs.js  index.js
crates/pamoja-ffi/: README.md  build.rs
crates/pamoja-gpio/: README.md
crates/pamoja-i18n/: Cargo.toml
crates/pamoja-i18n/i18n/: ar.ftl  en.ftl  fr.ftl  hi.ftl  pt.ftl  sw.ftl
crates/pamoja-i18n/src/: lib.rs
crates/pamoja-kit/: Cargo.toml  README.md
crates/pamoja-kit/src/: depletion.rs  geo.rs  lib.rs  units.rs  window.rs
crates/pamoja-ladder/: Cargo.toml  README.md
crates/pamoja-ladder/src/: lib.rs
crates/pamoja-loopback/: README.md
crates/pamoja-lora/: Cargo.toml  README.md
crates/pamoja-lorawan/: Cargo.toml  README.md
crates/pamoja-mavlink/: Cargo.toml  README.md
crates/pamoja-mavlink/src/: crc.rs  error.rs  frame.rs  lib.rs  link.rs  parser.rs  signing.rs  vehicle.rs
crates/pamoja-mavlink/src/dialect/: common.rs  enums.rs  macros.rs  mod.rs
crates/pamoja-mavlink/src/drivers/: mod.rs  serial.rs  tcp.rs  udp.rs
crates/pamoja-mavlink/src/protocol/: command.rs  mission.rs  mod.rs  offboard.rs
crates/pamoja-mavlink/tests/: sitl.rs
crates/pamoja-mesh/: README.md
crates/pamoja-modbus/: README.md
crates/pamoja-mqtt/: Cargo.toml  README.md
crates/pamoja-mqtt/src/: lib.rs
crates/pamoja-mqtt/tests/: roundtrip.rs
crates/pamoja-power/: Cargo.toml  README.md
crates/pamoja-power/src/: duty.rs  lib.rs  plan.rs
crates/pamoja-profile/: Cargo.toml  README.md
crates/pamoja-ros2/: Cargo.toml  README.md
crates/pamoja-routing/: README.md
crates/pamoja-security/: Cargo.toml  README.md
crates/pamoja-sensors/: Cargo.toml  README.md
crates/pamoja-sensors/src/: ads1115.rs  bme280.rs  ds18b20.rs  error.rs  ina219.rs  lib.rs
crates/pamoja-serial/: Cargo.toml  README.md
crates/pamoja-serial/src/: cobs.rs  error.rs  lib.rs  slip.rs
crates/pamoja-session/: Cargo.toml  README.md
crates/pamoja-session/src/: aead.rs  error.rs  kdf.rs  kex.rs  lib.rs  session.rs
crates/pamoja-sim/: Cargo.toml  README.md
crates/pamoja-sim/src/: actuator.rs  lib.rs  link.rs  sensor.rs
crates/pamoja-sync/: Cargo.toml  README.md
crates/pamoja-telemetry/: README.md
crates/pamoja-zenoh/: Cargo.toml  README.md
crates/pamoja-zenoh/src/: lib.rs  transport.rs
crates/xtask/: Cargo.toml
crates/xtask/src/: docs.rs  footprint.rs  i18n.rs  main.rs
crates/zero-edge-codec/: Cargo.toml
crates/zero-edge-codec/src/: lib.rs
crates/zero-edge-core/: Cargo.toml
crates/zero-edge-core/src/: bus.rs  device.rs  error.rs  lib.rs  store.rs  transport.rs
docs/: README.md
docs/pamoja-actuators/: README.md  pca9685.md  stepper.md
docs/pamoja-audit/: README.md  entry.md  log.md
docs/pamoja-bus/: README.md
docs/pamoja-can/: README.md  error.md  frame.md  id.md  j1939.md
docs/pamoja-coap/: README.md
docs/pamoja-codec/: README.md  bytes.md  cbor.md  delta.md  json.md
docs/pamoja-core/: README.md  bus.md  device.md  error.md  store.md  transport.md
docs/pamoja-dashboard/: README.md  assets.md  auth.md  command.md  fleet.md  mock.md  serve.md  source.md  state.md
docs/pamoja-ffi/: README.md  mqtt.md
docs/pamoja-gpio/: README.md  error.md  i2c.md  pin.md  spi.md
docs/pamoja-kit/: README.md  anomaly.md  arm.md  calibration.md  chassis.md  complementary.md  debounce.md  depletion.md  drive.md  drivers.md  geo.md  imu.md  kalman.md  median.md  motion.md  pid.md  (+12 more)
examples/: Cargo.toml  degraded_link.rs  device_profile.rs  lora_budget.rs  mavlink_sitl.rs  telemetry.rs
sitl/: README.md  ardupilot.Dockerfile  px4.Dockerfile  run-ardupilot.sh  run-px4.sh
web/: index.html  styles.css
(+110 files in other folders)
