[package]
name = "pamoja-codec"
description = "Serialization and framing for pamoja: pluggable wire formats behind a common Codec trait."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
pamoja-core = { workspace = true }

[lints]
workspace = true
