[package]
name = "pamoja-core"
description = "Core engine for the pamoja device SDK: device model, transport, event bus, and error types."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[features]
# `std` is on by default and brings in the `std::error::Error` impl for hosted
# targets. Turn it off (`default-features = false`) to build the core for a `no_std`
# target, where it relies only on `core` and `alloc`.
default = ["std"]
std = []

[lints]
workspace = true
