[package]
name = "pamoja-dashboard"
description = "Local-first device dashboard for pamoja: a node serves a hand-built, localized web UI over its own hotspot from a language-neutral state snapshot, fully offline."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
# Not yet published: the serving tiers and localization CI are still being built.
publish = false

[features]
# The data contract and the mock are always available; the host-side HTTP/SSE
# server is opt-in (but on by default) so the contract can be reused without it.
# Serving brings the command authenticator, which needs the keyed-hash primitives
# and a system RNG.
default = ["serve"]
serve = ["dep:pamoja-session", "dep:getrandom", "dep:flate2"]

[dependencies]
# Only the data types are read from these crates to build the snapshot; the
# dashboard never drives control itself.
pamoja-telemetry = { path = "../pamoja-telemetry", version = "0.1.10" }
pamoja-profile = { path = "../pamoja-profile", version = "0.1.10" }
pamoja-power = { path = "../pamoja-power", version = "0.1.10" }
# The command authenticator reuses pamoja-session's HKDF/HMAC primitives so control
# actions are gated without a second crypto stack; only used by the serving layer.
pamoja-session = { path = "../pamoja-session", version = "0.1.10", optional = true }
getrandom = { version = "0.2", optional = true }
# Compresses the one-time asset load so the bundle is cheap over a weak hotspot link.
flate2 = { version = "1", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }

[lints]
workspace = true
