[package]
name = "pamoja-dashboard"
description = "Local-first device dashboard for pamoja: a node serves a hand-built, localized web UI over its own hotspot from a language-neutral state snapshot, fully offline."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

# Build the docs with the demo fleet compiled in, so the `Mock`/`Scenario` references in the
# doc comments resolve on docs.rs even though `mock` is off by default.
[package.metadata.docs.rs]
features = ["mock"]

[features]
# The data contract is always available; the host-side HTTP/SSE server is opt-in (but on
# by default) so the contract can be reused without it, and brings the command
# authenticator (keyed-hash primitives + a system RNG) and asset compression. The `mock`
# feature is the hardware-free demo fleet, kept OFF by default so a default build carries no
# demo scaffolding; turn it on for development, the dev server, and the showcase with
# `--features mock`. A real node never serves demo data regardless (only a `Mock` sets the
# demo flag), but keeping it opt-in means the shipped default is real source only.
default = ["serve", "tier-a", "all-locales"]
serve = ["dep:pamoja-session", "dep:getrandom", "dep:flate2"]
mock = []

# Capability tier, chosen at compile time. The full localized app is embedded unless `tier-c`
# is selected; `tier-a` (default) and `tier-b` both embed the full app. `tier-c` embeds only
# the minimal floor page for the smallest hardware. Build a non-default tier with
# `--no-default-features`, for example `--no-default-features --features "serve,tier-c"`. The
# per-tier transfer budgets are enforced by `cargo xtask dashboard footprint`.
tier-a = []
tier-b = []
tier-c = []

# Embedded locales. English is always baked in as the fallback; each other seed locale is a
# feature so Tier B can fit constrained flash by embedding only the languages a deployment
# needs, e.g. `--no-default-features --features "serve,tier-b,locale-sw"` for English plus
# Swahili. `all-locales` is the full seed set and is on by default (so tier-a ships every
# language); a real subset build drops it with `--no-default-features`. The page learns which
# locales a device actually carries from `GET /locales` and offers only those.
all-locales = ["locale-sw", "locale-ar", "locale-fr", "locale-pt", "locale-hi"]
locale-sw = []
locale-ar = []
locale-fr = []
locale-pt = []
locale-hi = []

[dependencies]
# Only the data types are read from these crates to build the snapshot; the
# dashboard never drives control itself.
pamoja-telemetry = { path = "../pamoja-telemetry", version = "0.1.12" }
pamoja-profile = { path = "../pamoja-profile", version = "0.1.12" }
pamoja-power = { path = "../pamoja-power", version = "0.1.12" }
# The command authenticator reuses pamoja-session's HKDF/HMAC primitives so control
# actions are gated without a second crypto stack; only used by the serving layer.
pamoja-session = { path = "../pamoja-session", version = "0.1.12", optional = true }
getrandom = { version = "0.2", optional = true }
# Compresses the one-time asset load so the bundle is cheap over a weak hotspot link.
flate2 = { version = "1", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }

# The dev server and the snapshot generator are the hardware-free demo, so they need the
# mock fleet. The gateway example shows real use and needs only the serving layer.
[[example]]
name = "dev"
required-features = ["serve", "mock"]

[[example]]
name = "snapshot"
required-features = ["mock"]

[[example]]
name = "gateway"
required-features = ["serve"]

[lints]
workspace = true
