[package]
name = "pamoja-mavlink"
description = "MAVLink wire protocol for pamoja: build, parse, and sign MAVLink v1 and v2 frames with the CRC-16/MCRF4XX checksum, per-message CRC_EXTRA, and MAVLink 2 SHA-256 message signing, plus a broad typed slice of the common dialect and a byte-stream link seam exercised against an in-process SITL. Hand-written from the mavlink.io spec, no_std and allocation-free at the core, toward MAVSDK/PX4/ArduPilot interop."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[features]
# `std` brings in the async byte-stream link seam, the in-process SITL, the vehicle
# device model over pamoja-core, the real UDP/TCP drivers, and the `std::error::Error`
# impl. Turn it off (`default-features = false`) to build the protocol core (framing,
# CRC, signing, dialect, protocol) for a `no_std` target.
default = ["std"]
std = ["dep:pamoja-core", "dep:tokio"]
# `serial` adds the tokio-serial `ByteLink` driver on top of the `std` layer; it pulls
# in a serial-port dependency, so it is opt-in.
serial = ["std", "dep:tokio-serial"]

[dependencies]
# SHA-256 is the one primitive MAVLink 2 signing is built on; the 48-bit signature
# and timestamp handling are implemented on top of it here, so this is the only
# dependency of the `no_std` core, mirroring how pamoja-session uses it.
sha2 = { version = "0.10", default-features = false }
# The `std` device model maps a vehicle onto the core device traits; pulled in only
# with `std`, so the `no_std` core stays sha2-only.
pamoja-core = { workspace = true, optional = true }
# The async runtime the vehicle model and the real UDP/TCP drivers run on. The wire
# core and the sans-IO protocol machines need no runtime; this is `std`-only.
tokio = { version = "1", features = [
    "rt",
    "sync",
    "time",
    "net",
    "io-util",
    "macros",
], optional = true }
# The serial-port backend behind the `serial` feature's `ByteLink` driver.
tokio-serial = { version = "5", optional = true }

[dev-dependencies]
# Drives the async link-seam, vehicle, and driver tests; multi-thread for the
# in-process SITL that runs a vehicle and an autopilot on one runtime.
tokio = { version = "1", features = [
    "rt",
    "rt-multi-thread",
    "macros",
    "time",
    "net",
    "io-util",
] }

[lints]
workspace = true
