[package]
name = "pamoja-mqtt"
description = "MQTT transport for the pamoja device SDK, built on rumqttc."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
pamoja-core = { workspace = true }
rumqttc = "0.24"
tokio = { version = "1", features = ["rt", "sync", "macros", "time"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
rumqttd = "0.19"
