[package]
name = "xtask"
description = "Build, codegen, and release orchestration for the pamoja workspace."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false

[dependencies]
# The dashboard i18n check parses the per-locale JSON bundles and gzips them to enforce
# the per-locale footprint budget.
serde_json = "1"
flate2 = "1"

[lints]
workspace = true
