[package]
name = "zero-edge-codec"
description = "Serialization and framing for zero-edge: pluggable wire formats behind a common Codec trait."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
zero-edge-core = { path = "../zero-edge-core" }

[lints]
workspace = true
